--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,13 @@
 .idea/modules/SpringDataJpa_test.iml
 .idea/vcs.xml
 .idea/workspace.xml
+.idea/libraries/Gradle__com_google_guava_guava_18_0.xml
+.idea/libraries/Gradle__io_springfox_springfox_core_2_6_1.xml
+.idea/libraries/Gradle__io_springfox_springfox_schema_2_6_1.xml
+.idea/libraries/Gradle__io_springfox_springfox_spi_2_6_1.xml
+.idea/libraries/Gradle__io_springfox_springfox_spring_web_2_6_1.xml
+.idea/libraries/Gradle__io_springfox_springfox_swagger2_2_6_1.xml
+.idea/libraries/Gradle__io_springfox_springfox_swagger_common_2_6_1.xml
+.idea/libraries/Gradle__io_swagger_swagger_annotations_1_5_10.xml
+.idea/libraries/Gradle__io_swagger_swagger_models_1_5_10.xml
+.idea/libraries/Gradle__org_mapstruct_mapstruct_1_0_0_Final.xml
