--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.username=postgres
 spring.datasource.password=password
 server.port=8080
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 
